--- a/index.html
+++ b/index.html
@@ -8,8 +8,77 @@
     <meta name="keywords" content="UNAM, FES, Aragon, la mejor, ICO, Computacion">
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/master.css">
+    <script src="./assets/js/cliente.js"></script>
 </head>
-<body>
-    En construcion ...
+<body id="cuerpo" onclick="cambiarFondoBody()">
+    <header>
+        <h1>Mi página personal</h1>
+        <nav>
+            <ul>
+                <li><a href="https://www.unam.mx/">|UNAM|</a></li>
+                <li><a href="http://aragon.unam.mx">|FES Aragón|</a></li>
+                <li><a href="https://www.aragon.unam.mx/fes-aragon/#!/oferta-academica/licenciaturas/computacion">|ICO FES Aragón|</a></li>
+                <li><a href="https://github.com/Gamaliel7/Gamaliel7.github.io">|Repositorio GitHub|</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Mis estudios</h1>
+            <article>
+                <h3>Educación Básica</h3>
+                <p id="parrafo1">Estudié el preescolar en la escuela Thomas Alva Edison
+                    <br>La primaria en la misma escuela
+                    <br>La secundaria en la escuela Adolfo Lopez Mateos
+                </p>
+            </article>
+            <article>
+                <h3>Educación Media</h3>
+                <p id="parrafo2" >Estudié la preparatoria en la Escuela Preparatoria Oficial No. 161</p>
+            </article>
+            <article>
+                <h3>Educación Superior</h3>
+                <p>Inicié la carrera de ingeniería mecacnica en el IPN, pero no continué
+                    <br>Posteriormente ingresé a la carrera de ingeniería en computación en la FES Aragón
+                </p>
+            </article>
+        </section>
+        <section>
+            <h1>Tecnologías que conozco y nivel de dominio</h1>
+            <article>
+                <h3>Lenguajes de programación</h3>
+                <p>Conozco algunos lenguajes de progamación y el que manejo un poco mejor es Python</p>
+            </article>
+        </section>
+        <section>
+            <h1>Información adicional</h1>
+            <article>
+                <h3>Pasatiempos</h3>
+                <p>-Salir con mi novia
+                    <br>-Ir al cine
+                    <br>-Jugar basketball
+                    <br>-Jugar ajedrez
+                    <br>-Jugar videojuegos
+                </p>
+            </article>
+        </section>
+
+        <div style="width: 10px; height: 10px; 
+             background-color: rgb(70, 84, 70);
+              color: white;" >
+            div
+        </div>
+    </main>
+    <aside>
+        <h4>Informacion adicional</h4>
+        <p>Mario Juárez
+            <br>ICO
+        </p>
+    </aside>
+
+    <footer>
+        <p>Todos los derechos reservados. FES Aragon UNAM 2024</p>
+    </footer>
 </body>
 </html>
